pkgs/artifacts/tests/config/snapshots/tests__config__backend_tests__snapshot_partial_backend_nixos_only.snap
---
source: tests/config/backend_tests.rs
expression: "make_snapshot!(input, backend)"
---
Input:
[test.nixos]
check = "./check.sh"
serialize = "./serialize.sh"

Parsed:
BackendEntry {
    nixos: Some(
        TargetConfig {
            enabled: None,
            check: Some(
                "/tmp/FILTERED/./check.sh",
            ),
            serialize: Some(
                "/tmp/FILTERED/./serialize.sh",
            ),
        },
    ),
    home: None,
    shared: None,
}
