pkgs/artifacts/tests/config/snapshots/tests__config__backend_tests__snapshot_passthrough_mode_no_scripts.snap
---
source: tests/config/backend_tests.rs
expression: "make_snapshot!(input, backend)"
---
Input:
[test.nixos]
enabled = true

[test.home]
enabled = true

Parsed:
BackendEntry {
    nixos: Some(
        TargetConfig {
            enabled: Some(
                true,
            ),
            check: None,
            serialize: None,
        },
    ),
    home: Some(
        TargetConfig {
            enabled: Some(
                true,
            ),
            check: None,
            serialize: None,
        },
    ),
    shared: None,
}
