pkgs/artifacts/tests/config/snapshots/tests__config__backend_tests__snapshot_target_config_disabled_explicit.snap
---
source: tests/config/backend_tests.rs
expression: snapshot
---
TargetConfig:
TargetConfig {
    enabled: Some(
        false,
    ),
    check: Some(
        "./check.sh",
    ),
    serialize: Some(
        "./serialize.sh",
    ),
}

serializes: true
is_enabled: false
