pkgs/artifacts/tests/config/snapshots/tests__config__backend_tests__snapshot_target_config_passthrough.snap
---
source: tests/config/backend_tests.rs
expression: snapshot
---
TargetConfig:
TargetConfig {
    enabled: Some(
        true,
    ),
    check: None,
    serialize: None,
}

serializes: false
is_enabled: true
