pkgs/artifacts/tests/config/snapshots/tests__config__backend_tests__snapshot_target_config_serializes_true.snap
---
source: tests/config/backend_tests.rs
expression: snapshot
---
TargetConfig:
TargetConfig {
    enabled: None,
    check: Some(
        "./check.sh",
    ),
    serialize: Some(
        "./serialize.sh",
    ),
}

serializes: true
is_enabled: true
