pkgs/artifacts/tests/config/snapshots/tests__config__backend_tests__snapshot_target_config_validation_check_without_serialize.snap
---
source: tests/config/backend_tests.rs
expression: snapshot
---
TargetConfig:
TargetConfig {
    enabled: None,
    check: Some(
        "./check.sh",
    ),
    serialize: None,
}

Validation result:
Err(backend 'test.nixos': 'check' requires 'serialize' to be defined)
