pkgs/artifacts/tests/config/snapshots/tests__config__backend_tests__snapshot_target_config_validation_serialize_without_check.snap
---
source: tests/config/backend_tests.rs
expression: snapshot
---
TargetConfig:
TargetConfig {
    enabled: None,
    check: None,
    serialize: Some(
        "./serialize.sh",
    ),
}

Validation result:
Err(backend 'test.home': 'serialize' requires 'check' to be defined)
