pkgs/artifacts/tests/config/snapshots/tests__config__backend_tests__snapshot_validate_shared_serialize_missing.snap
---
source: tests/config/backend_tests.rs
expression: snapshot
---
Input:
[test.nixos]
check = "./check.sh"
serialize = "./serialize.sh"

Result:
Err(backend 'test' does not support shared artifacts: missing or disabled shared target in /tmp/FILTERED/backend.toml)
