pkgs/artifacts/tests/config/snapshots/tests__config__backend_tests__snapshot_validate_shared_serialize_present.snap
---
source: tests/config/backend_tests.rs
expression: snapshot
---
Input:
[test.nixos]
check = "./check.sh"
serialize = "./serialize.sh"

[test.shared]
check = "./shared_check.sh"
serialize = "./shared_serialize.sh"

Result:
Ok(())
